--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -592,7 +592,6 @@ img {
   line-height: 31px;
   color: black;
   margin-bottom: 55px;
-  max-width: 580px;
 }
 
 /* ---Background Image--- */
@@ -635,8 +634,10 @@ img {
   width: 20px;
   height: 20px;
   margin-right: 15px;
-  -webkit-animation: sk-bouncedelay 1.4s infinite ease-in-out both;
-          animation: sk-bouncedelay 1.4s infinite ease-in-out both;
+  -webkit-animation: sk-bouncedelay 1.4s infinite ease-in-out
+ both;
+          animation: sk-bouncedelay 1.4s infinite ease-in-out
+ both;
 }
 
 .preloader-active .preloader-area-wrap .spinner div.bounce1 {
@@ -1763,6 +1764,7 @@ blockquote p {
 /* ---Header Bottom--- */
 .header-bottom {
   border-top: 1px solid #dee2e6;
+  border-bottom: 1px solid #dee2e6;
 }
 
 /* ---Main Header--- */
