--- a/assets/css/accordion.css
+++ b/assets/css/accordion.css
@@ -41,6 +41,8 @@ input {
   color: #2c3e50;
   background: white;
   transition: all 0.35s;
+  height: 300px;
+  overflow-y: scroll;
 }
 .tab-close {
   display: flex;
