--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1807,7 +1807,8 @@ blockquote p {
   -webkit-align-items: center;
       -ms-flex-align: center;
           align-items: center;
-  font-size: 14px;
+  font-size: 10px;
+  /* font-size: 14px; */
   text-transform: uppercase;
   position: relative;
 }
