--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -890,7 +890,8 @@ img {
 }
 
 .btn-custom-size.lg-size {
-  width: 165px;
+  width: auto;
+  padding: 0 50px;
   height: 50px;
   line-height: 50px;
   font-size: 16px;
