--- a/assets/css/accordion.css
+++ b/assets/css/accordion.css
@@ -20,7 +20,7 @@
   /* background: #C7C7C7; */
   font-weight: bold;
   cursor: pointer;
-  border-bottom: 1px solid #abd373;
+  border-bottom: 1px solid #0EA673;
  
   /* Icon */
 }
@@ -33,7 +33,7 @@
   height: 1em;
   text-align: center;
   transition: all 0.35s;
-  /* color: #ABD373; */
+  /* color: #0EA673; */
 }
 .tab-content {
   max-height: 0;
@@ -41,7 +41,7 @@
   color: #2c3e50;
   background: white;
   transition: all 0.35s;
-  height: 120px;
+  /* height: 120px; */
   overflow-y: scroll;
 }
 .tab-close {
